# Kernel

./: .gitignore  GNUmakefile  init_srvs.cpio
kernel/: GNUmakefile
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/amd64/: mod.rs  ports.rs  serial.rs
kernel/src/arch/amd64/acpi/: main_table_parser.rs
kernel/src/arch/amd64/apic/: ioapic.rs  mod.rs
kernel/src/arch/amd64/cpu/smp/: macros.rs  percpu.rs  startup.rs
kernel/src/arch/amd64/interrupts/: base.rs  idt.rs
kernel/src/arch/amd64/ipc/: endpoint.rs  message.rs  mod.rs  object_table.rs
kernel/src/arch/amd64/memory/: misc.rs
kernel/src/arch/amd64/memory/pmm/: bump_alloc.rs  mod.rs  object_pool.rs  pages_allocator.rs  slab.rs  zones_manager.rs
kernel/src/arch/amd64/memory/vmm/: mod.rs  pf_handler.rs
kernel/src/arch/amd64/scheduler/: addr_space.rs  cpu_local.rs  exec_loader.rs  mod.rs  stack.rs  task.rs  task_storage.rs
kernel/src/arch/amd64/scheduler/syscall/: cap_check.rs  cap_handler.rs  ipc_handlers.rs  memory_handler.rs  mod.rs  syscall_groups.rs  tcb.rs  thread_handler.rs
kernel/src/arch/amd64/timer/: mod.rs
kernel/src/bootinfo/: mod.rs
kernel/src/cpio_parser/: mod.rs
kernel/src/early_print/: fb_printer.rs
userland/init_service/: Makefile  cpio_parser.h  minimal_elf.h  server.c
userland/libOs/: CMakeLists.txt  includeme.mk  ipc.h  shared.h  stdlib.h  string.h  subproject.mk  syscalls.h  types.h
userland/libOs/include/: memory.h  stdio.h  stdlib.h  string.h  tcb.h
userland/libOs/src/: stdlib.c  string.c
userland/name_server/: Makefile  server.c  server.elf
